# THE_KARTA

./: CMakeLists.txt  README.md  drawing.hpp  header.hpp  karta.hpp  mani.cpp  other_stuffs.hpp  resources.hpp  scene.hpp  translate.hpp
